@startuml
class ConexaoBancoDeDados {
    - conexao
    + __construct()
    - conectar()
    + obterConexao()
    + __destruct()
}

class Aluno {
    - conexao
    + __construct()
    - novoAluno()
    - listaAlunos()
    - trancarMatricula()
    - destrancarMatricula()
    + obterListaDeAlunos()
    + obterTrancarMatricula()
    + obterDestrancarMatricula()
    + matricularAluno()
    + __destruct()
}

class Venda {
    - conn
    + __construct()
    + registrarVenda()
}

class Produtos {
    - conexao
    + __construct()
    - criarProduto()
    - listaDeProdutos()
    - deletarProduto()
    - pesquisarProduto()
    + novoProduto()
    + obterProdutos()
    + fazerDelecaoProduto()
    + __destruct()
}

class Pagamento {
    - conexao
    + __construct()
    - registrarPgtoMensalidade()
    + registrarPagamento()
}

class RelatorioVendas {
    - conn
    + __construct()
    + gerarRelatorio()
}

class Login {
    - conexao
    + __construct()
    + verificarCredenciais()
    + verificarLogin()
    + logout()
    + __destruct()
}

Aluno ..> ConexaoBancoDeDados : usa
Venda ..> ConexaoBancoDeDados : usa
Produtos ..> ConexaoBancoDeDados : usa
Pagamento ..> ConexaoBancoDeDados : usa
RelatorioVendas ..> ConexaoBancoDeDados : usa
Login ..> ConexaoBancoDeDados : usa
@enduml
